# meta-population-network-model

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Manual de usuario/: Manual de usario.aux  Manual de usario.tex
cmodel/: cmodel.py
cmodel/cmp/: ast.py  codegen.py  compile.py  parsetab.py  visitor.py
cmodel/repo/: SIR.py
dash_app/: add_model.py  app.py  index.py  main.py  models.py  repository.py
docs/: tech.md
docs/scientific/: reporte cientifico.tex
docs/tech/: tech.md
metapopulation_network_model/: compile.py  example.py  example2nodes.py
metapopulation_network_model/cmp/: codegen.py  collector.py  lexer.py  parser.out
metapopulation_network_model/models/: ModelSIR.py  SIR.py
metapopulation_network_model/models/graph_models/: simple.py
mmodel/: a.py  ex.json  ex.xml  example_nodes.json  example_params.json  example_params.xml  mmodel.py  network.py  simulation.py
src/: index.py  network_simulation.py
src/cmodel/cmp/: ast.py  codegen.py  collector.py  compile.py  lexer.py  parser.py
src/dash_app/: add_model.py  app.py  graph_gen.py  index.py  network_simulation.py
src/mmodel/: flux.py  mmodel.py  network.py  simple_trip.py
src/test_simple/: example_network.cnf.json  example_network.py  test_simple_json.py
src/utils/: imports.py
tests/: example_habana.json  test_metapopulation_network_model.py
tests/cmodel/: SIR.py  SIRS.py  SIR_Expand.py  test_cmodel_cmp.py  test_cmodel_expand_cmp.py
tests/mmodel/: test_input.json  test_mmodel.py
utils/: hashing.py
(+53 files in other folders)
