[tool.poetry]
name = "metapopulation-network-model"
version = "0.1.0"
description = ""
authors = ["RodroVMS <democlesvanshepars@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
dash = "^2.0.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
scipy = "^1.7.2"
ply = "^3.11"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
